@@ -7,47 +7,49 @@ import org.springframework.jdbc.core.ResultSetExtractor;
 import org.springframework.jdbc.core.namedparam.MapSqlParameterSource;
 import org.springframework.jdbc.core.namedparam.NamedParameterJdbcTemplate;
 
+import javax.sql.DataSource;
 import java.sql.ResultSet;
 import java.sql.SQLException;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import static br.gov.sp.fatec.extractload.utils.ExtractLoadUtils.generateSelectIdsQuery;
+import static java.util.Objects.nonNull;
 
 public class ExtractPageProcessor implements PageProcessor<RowMappedDto> {
 
-    private final NamedParameterJdbcTemplate jdbcTemplate;
+    private final DataSource dataSource;
     private final String tableName;
     private final String primaryKeyName;
 
-    public ExtractPageProcessor(String tableName, String primaryKeyName, NamedParameterJdbcTemplate jdbcTemplate) {
+    public ExtractPageProcessor(final String tableName, final String primaryKeyName, final DataSource dataSource) {
+        this.dataSource = dataSource;
         this.tableName = tableName;
         this.primaryKeyName = primaryKeyName;
-        this.jdbcTemplate = jdbcTemplate;
     }
 
     @Override
     public void process(List<RowMappedDto> page) {
-        List<String> ids = new ArrayList<>();
 
         if (!page.isEmpty()) {
             MapSqlParameterSource parameters = new MapSqlParameterSource();
             parameters.addValue("ids", page.stream()
                 .map(row -> row.getRow().entrySet()
                     .stream()
-                    .filter(field -> field.getKey().isPrimaryKey() && primaryKeyName.equals(field.getKey().getName()))
+                    .filter(field -> field.getKey().primaryKey() && primaryKeyName.equals(field.getKey().name()))
                     .findFirst()
                     .map(Map.Entry::getValue)
-                    .orElse(null)).collect(Collectors.toList()));
+                    .orElse(null))
+                .toList());
 
-            jdbcTemplate.query(generateSelectIdsQuery(tableName, primaryKeyName), parameters, new RowExtractor(ids));
+            var jdbcTemplate = new NamedParameterJdbcTemplate(dataSource);
+            List<String> ids = jdbcTemplate.query(generateSelectIdsQuery(tableName, primaryKeyName), parameters, new RowExtractor());
 
-            if (!ids.isEmpty()) {
+            if (nonNull(ids) && !ids.isEmpty()) {
                 page.forEach(row -> row.getRow()
                     .entrySet().stream()
-                    .filter(map -> map.getKey().isPrimaryKey())
+                    .filter(map -> map.getKey().primaryKey())
                     .findFirst()
                     .ifPresent(field -> {
                         if (ids.contains(field.getValue().toString())) {
@@ -58,20 +60,20 @@ public class ExtractPageProcessor implements PageProcessor<RowMappedDto> {
         }
     }
 
-    private class RowExtractor implements ResultSetExtractor<Void> {
+    private class RowExtractor implements ResultSetExtractor<List<String>> {
 
         private final List<String> ids;
 
-        public RowExtractor(List<String> ids) {
-            this.ids = ids;
+        public RowExtractor() {
+            this.ids = new ArrayList<>();
         }
 
         @Override
-        public Void extractData(ResultSet rs) throws SQLException, DataAccessException {
+        public List<String> extractData(final ResultSet rs) throws SQLException, DataAccessException {
             while (rs.next()) {
                 ids.add(rs.getString(primaryKeyName));
             }
-            return null;
+            return List.copyOf(ids);
         }
 
     }
